--- a/style.css
+++ b/style.css
@@ -1130,3 +1130,101 @@ margin: 0 5% 2em;
     font-size:2rem;
   }
 }
+
+.frame .jumbotron {
+  box-shadow: 1px 1px 10px #8c8c8c;
+  -webkit-box-shadow: 1px 1px 10px #8c8c8c;
+  -moz-box-shadow: 1px 1px 10px #8c8c8c;
+  background-attachment:inherit;
+}
+
+.page-template-page-process .jumbotron {
+  margin-bottom:0;
+  background-image: url("images/assets/grind.JPG");
+  background-position: 50% 50%;
+}
+.page-template-page-process #down .jumbotron {
+  background-image: url("images/process/1.JPG");
+  background-position: 50% 50%;
+}
+#process-2 .jumbotron {
+  background-image: url("images/process/2.JPG");
+  background-position: 50% 50%;
+}
+
+#process-3 .jumbotron {
+  background-image: url("images/process/3.JPG");
+  background-position: 50% 0;
+}
+
+#process-4 .jumbotron {
+  background-image: url("images/process/4.JPG");
+  background-position: 50% 50%;
+}
+
+#process-5 .jumbotron {
+  background-image: url("images/process/5.JPG");
+  background-position: 50% 50%;
+}
+
+#process-6 .jumbotron {
+  background-image: url("images/process/6.JPG");
+  background-position: 50% 50%;
+}
+
+#process-7 .jumbotron {
+  background-image: url("images/process/7.JPG");
+  background-position: 50% 50%;
+}
+
+#process-8 .jumbotron {
+  background-image: url("images/process/8.JPG");
+  background-position: 50% 50%;
+}
+
+#process-9 .jumbotron {
+  background-image: url("images/process/9.JPG");
+  background-position: 50% 50%;
+}
+
+.process {
+  height:100%;
+  width:100%;
+  padding-top:0;
+}
+.frame {
+  padding:2rem;
+  height:calc(100% - 50px);
+  width:100%;
+  background:white;
+}
+.process .outer-container {
+  width:100%;
+  height:100%;
+  padding:0;
+}
+
+.frame h1 {
+  background:rgba(0,0,0,.25);
+  padding:5rem 0;
+  max-width:55%;
+  margin:0 auto;
+  font-size:30px;
+  border:5px solid white;
+}
+@media screen and (orientation:portrait) and (max-width:767px){
+  .frame .container {
+    padding:2rem;
+    margin:0;
+  }
+  .frame h1 {
+    max-width:95%;
+    padding:5rem 2rem;
+  }
+}
+
+.frame .glyphicon-circle-arrow-up
+ {
+  top:5%;
+  bottom:auto;
+}
